added product import feature (over JSON) to shop view

--- a/src/imaing/expsys/client/view/ShopView.ui.xml
+++ b/src/imaing/expsys/client/view/ShopView.ui.xml
@@ -10,5 +10,13 @@
 	  <g:HTMLPanel ui:field="chrsPanel"/>
 	  <g:Button ui:field="btnDelChr" text="Delete characteristic"/>
 	  
+	  <p>
+	      <g:TextArea ui:field="newProdsJson" />
+	      <g:Button ui:field="btnAddProds" text="Add products"/>
+    
+        <g:HTMLPanel ui:field="prodsPanel"/>
+        <g:Button ui:field="btnDelProd" text="Delete product"/>
+	  </p>
+	  
 	</g:HTMLPanel>
 </ui:UiBinder> 
