--- a/src/imaing/expsys/client/view/ShopView.ui.xml
+++ b/src/imaing/expsys/client/view/ShopView.ui.xml
@@ -11,7 +11,7 @@
 		  <g:HTMLPanel ui:field="chrsPanel"/>
 		  <g:Button ui:field="btnDelChr" text="Delete characteristic"/>
 	  </p>
-	  
+		<p id="fcls"></p>
 	  <p>
 	      <g:TextArea ui:field="newProdsJson" />
 	      <g:Button ui:field="btnAddProds" text="Add products"/>
