--- a/src/imaing/expsys/client/view/ShopView.ui.xml
+++ b/src/imaing/expsys/client/view/ShopView.ui.xml
@@ -12,6 +12,7 @@
 		  <g:Button ui:field="btnDelChr" text="Delete characteristic"/>
 	  </p>
 		<p id="fcls"></p>
+		<p id="fcls2"></p>
 	  <p>
 	      <g:TextArea ui:field="newProdsJson" />
 	      <g:Button ui:field="btnAddProds" text="Add products"/>
